Fixed issue with Tooltip overlap

--- a/tapestry/apps/tapestry/priv/www/static/foundation.overrides.css
+++ b/tapestry/apps/tapestry/priv/www/static/foundation.overrides.css
@@ -557,10 +557,6 @@ body {
     stroke-opacity: .6;
 }
 
-svg {
-    transform: translate3d(0,0,0);
-}
-
 body>canvas {
     position: absolute;
     top: 0;
